codepkg/objects/Encumberance__c.object
<CustomObject>
    <fields>
        <fullName>EncumbranceNumber__c</fullName>
        <description>Encumbrance Number of this Encumbrance Record (Used for PR/Transmittal).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Encumbrance Number of this Encumbrance Record (Used for PR/Transmittal).</inlineHelpText>
        <label>Encumbrance Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>End Date of Start Date of  Encumbrance.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>End Date of Start Date of  Encumbrance.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FundingOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Funding Opportunity to which the Encumbrance is related.</description>
        <inlineHelpText>Funding Opportunity to which the Encumbrance is related.</inlineHelpText>
        <label>Disaster Grant/FO</label>
        <referenceTo>Funding_Opportunity__c</referenceTo>
        <relationshipLabel>Encumbrances</relationshipLabel>
        <relationshipName>Encumbrances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentEncumbrance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Original Encumbrance Name, if this Encumbrance is an Amended Encumbrance.</description>
        <inlineHelpText>Original Encumbrance Name, if this Encumbrance is an Amended Encumbrance.</inlineHelpText>
        <label>Parent Encumbrance</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only select  Encumbrance which is tied with same Funding Opportunity.</errorMessage>
            <filterItems>
                <field>$Source.FundingOpportunity__c</field>
                <operation>equals</operation>
                <valueField>Encumberance__c.FundingOpportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Encumberance__c</referenceTo>
        <relationshipLabel>Encumbrances</relationshipLabel>
        <relationshipName>Encumbrances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Start Date of  Encumbrance.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date of  Encumbrance.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Encumbrance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EncumbranceNumber__c</columns>
        <columns>FundingOpportunity__c</columns>
        <columns>ParentEncumbrance__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ENC-{000000}</displayFormat>
        <label>Encumbrance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encumbrances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Start_Date_And_End_Date</fullName>
        <active>true</active>
        <description>End Date should be greater than Start Date</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,EndDate__c &lt; StartDate__c)</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>&quot;End Date&quot; should be greater than &quot;Start Date&quot;.</errorMessage>
    </validationRules>
</CustomObject>